# productive-time-mcp

./: LICENSE  README.md  pyproject.toml
src/productive_time_mcp/: __init__.py  __main__.py  api.py  server.py  utils.py
src/productive_time_mcp/tools/: __init__.py  people.py  time_entries.py  time_reports.py
tests/: __init__.py  test_utils.py
